@@ -7,6 +7,8 @@ New features:
 Bug fixes:
 ~~~~~~~~~~
 - Fix : members didn't have enough rights to access their preferences
+- Fix : invalidate ldap connection cache once on ldap.SERVER_DOWN error in
+  LDAPBackingDirectory
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
